--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <div class="p-8 text-center">
                             <h3 class="text-3xl mb-2">Maquiagem</h3>
                             <p class="text-gray-600 mb-6 h-12">Cores, texturas e performance para a mulher moderna.</p>
-                            <a href="https://wa.me/55SEUNUMERO?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20linha%20de%20maquiagem." target="_blank" class="btn-outline py-2 px-8 rounded-full">
+                            <a href="https://wa.me/5586999603307" target="_blank" class="btn-outline py-2 px-8 rounded-full">
                                 Saiba Mais
                             </a>
                         </div>
@@ -192,7 +192,7 @@
                     Visite nosso espaço em Parnaíba para uma experiência de compra personalizada ou entre em contato para uma consultoria de beleza. Estamos à sua disposição.
                 </p>
                 <div data-aos="fade-up" data-aos-delay="200">
-                    <a href="https://wa.me/5586994271903" target="_blank" class="inline-block bg-[#2D2D2D] text-white text-lg py-4 px-12 rounded-md transition-transform hover:scale-105">
+                    <a href="https://wa.me/5586999603307" target="_blank" class="inline-block bg-[#2D2D2D] text-white text-lg py-4 px-12 rounded-md transition-transform hover:scale-105">
                         <i class="fab fa-whatsapp mr-2"></i> Fale Conosco
                     </a>
                     <p class="mt-8 text-gray-600">Rua Ceará, Bairro Boa Esperança, Parnaíba - PI</p>
@@ -210,7 +210,7 @@
             <p class="mb-6">Curadoria em Beleza e Estilo | Parnaíba - PI</p>
             <div class="flex justify-center space-x-6 my-6">
                 <a href="https://www.instagram.com/glow___.essence/" target="_blank" aria-label="Instagram" class="hover:text-black transition-colors text-2xl"><i class="fab fa-instagram"></i></a>
-                <a href="https://wa.me/5586994271903" aria-label="WhatsApp" class="hover:text-black transition-colors text-2xl"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/5586999603307" aria-label="WhatsApp" class="hover:text-black transition-colors text-2xl"><i class="fab fa-whatsapp"></i></a>
             </div>
             <p class="text-sm text-gray-400">&copy; 2025 Glow Essence. Todos os direitos reservados.</p>
         </div>
