--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <div class="p-8 text-center">
                             <h3 class="text-3xl mb-2">Linha Masculina</h3>
                             <p class="text-gray-600 mb-6 h-12">Cuidado e estilo para a rotina do homem contemporâneo.</p>
-                            <a href="https://wa.me/55SEUNUMERO?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20linha%20masculina." target="_blank" class="btn-outline py-2 px-8 rounded-full">
+                            <a href="https://wa.me/5586999603307" target="_blank" class="btn-outline py-2 px-8 rounded-full">
                                 Saiba Mais
                             </a>
                         </div>
@@ -175,7 +175,7 @@
                         <div class="p-8 text-center">
                             <h3 class="text-3xl mb-2">Acessórios</h3>
                             <p class="text-gray-600 mb-6 h-12">Peças selecionadas que complementam e definem seu estilo.</p>
-                            <a href="https://wa.me/55SEUNUMERO?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20os%20acessórios." target="_blank" class="btn-outline py-2 px-8 rounded-full">
+                            <a href="https://wa.me/5586999603307" target="_blank" class="btn-outline py-2 px-8 rounded-full">
                                Saiba Mais
                             </a>
                         </div>
